src/objects/APTPS_Document_Line_Item__c.object
<CustomObject>
    <description>This custom object will be used to support sorting and grouping for Latin America quote dcuments. It will have a master detail relationship with Quote/Proposal and will have the fields which will be mapped with Proposal Line Item objects.</description>
    <fields>
        <fullName>APTPS_Is_Group_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set if this record is a group record that was added by the APEX trigger that writes these records</description>
        <label>Is Group Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_Quote_Proposal__c</fullName>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Document Line Items</relationshipLabel>
        <relationshipName>Document_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Description_Info__c</fullName>
        <label>Additional Description Info</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_USD__c</fullName>
        <label>Discount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group_Comment__c</fullName>
        <label>Group Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Subtotal_Local_Currency__c</fullName>
        <label>Group Subtotal (Local Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Last_in_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Last in Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item #</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price_Total__c</fullName>
        <label>List Price Total</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_price_Per_Unit__c</fullName>
        <label>List Price Per Unit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Production_Weeks__c</fullName>
        <label>Production Weeks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Price_Per_Unit__c</fullName>
        <label>Selling Price per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Price_Total_Local_Currency__c</fullName>
        <label>Selling Price Total (Local Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Price_Total__c</fullName>
        <label>Selling Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Price_per_Unit_Local_Currency__c</fullName>
        <label>Selling Price per Unit (Local Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seq_in_Group__c</fullName>
        <label>Seq# in Group</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAG_ID__c</fullName>
        <label>Tag ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Freight_Local_Currency__c</fullName>
        <label>Total Freight (Local Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Freight__c</fullName>
        <label>Total Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Document Line Item</label>
    <nameField>
        <displayFormat>DLN-{00000000}</displayFormat>
        <label>Document Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>